Started writing sceleton of MPC section

--- a/control/lqr.tex
+++ b/control/lqr.tex
@@ -6,7 +6,7 @@
         \gls{LQG} combines this optimal control technique with a full-state estimator when all the satets cannot be measured \cite{Li2016}.
         An \gls{LQG} was effectiveley used by \cite{Slabber2020} for swing-damping control of a multirotor and suspended payload system.
         An \gls{LQR} for North velocity control with full-state feedback is presented in this section. 
-        This controller structure can be duplicated for East veloicty control.
+        This controller structure can be duplicated for East velocity control.
         
         \paragraph
         An \gls{LQR} does not inherently apply integral action and does not achieve zero steady-state tracking error in the presence of disturbacnes.
