--- a/system_id/system_id.tex
+++ b/system_id/system_id.tex
@@ -49,7 +49,7 @@
         that can be used for a range of different suspended payloads without being redesigned for specific dynamics.
 
         % \gls{DMDc} and \gls{HAVOKc} work very similarly with single pend.
-        % \gls{HAVOKc} has slightly better prediction accuracy, but this small difference has neglible effect on control.
+        % \gls{HAVOKc} has slightly better prediction accuracy, but this small difference has negligible effect on control.
         % It is difficult to compare the white-box to the black-box models because the real effect will only be seen during control.
         % However it is clear that the accuracy of the white-box model degrades significantly 
         % when a payload that causes double pendulum dynamics.
