--- a/control/plots/rootlocus_cl.tex
+++ b/control/plots/rootlocus_cl.tex
@@ -21,10 +21,10 @@
           xmin=-5, xmax=0.2,
           ymin=-4, ymax=4,
           grid = major,
-          % legend cell align = left,
-          % legend pos = north east,
+          legend cell align = left,
+          legend pos = south west,
           grid style = dashed,
-          % legend style = {font = \scriptsize},
+          legend style = {font = \scriptsize},
           label style = {font = \scriptsize},
           tick label style = {font = \scriptsize},
           width = 0.55\columnwidth,
@@ -38,12 +38,12 @@
         ]
 
 
-        \addplot [forget plot]
+        \addplot+[forget plot]
           table[row sep=crcr]{%
         0	0\\
         };
 
-        \addplot [only marks, mark=o, mark options={solid, mycolor1}, style = solid, ultra thick,  forget plot]
+        \addplot+[only marks, mark=o, mark options={solid, mycolor1}, style = solid,  forget plot]
           table[row sep=crcr]{%
         6.77962264341521e-16	3.13209195267317\\
         6.77962264341521e-16	-3.13209195267317\\
@@ -52,8 +52,9 @@
         -4.01084873037111	0\\
         -0.563508326896292	0\\
         };
+        % \addlegendentry{Open loop zeros}
 
-        \addplot [color=mycolor1, only marks, mark=x, mark options={solid, mycolor1}, style = solid, ultra thick, forget plot]
+        \addplot+[color=mycolor1, only marks, mark=x, mark options={solid, mycolor1}, style = solid, forget plot]
           table[row sep=crcr]{%
         0	0\\
         0	0\\
@@ -64,8 +65,9 @@
         -4.01084873036827	0\\
         -3.59932833650225	0\\
         };
+        % \addlegendentry{Open loop poles}
         
-        \addplot [color=blue, style = solid, ultra thick, forget plot]
+        \addplot+[color=blue, style = solid, forget plot]
           table[row sep=crcr]{%
         0	0\\
         -9.32246040892286e-05	0.00990567878862648\\
@@ -163,7 +165,7 @@
         -0.563508326896292	0\\
         };
         
-        \addplot [color=mycolor2, style = solid, ultra thick, forget plot]
+        \addplot+[color=mycolor2, style = solid, forget plot]
           table[row sep=crcr]{%
         -3.59932833650225	0\\
         -3.59932688489678	0\\
@@ -261,7 +263,7 @@
         -4.01084873037111	0\\
         };
         
-        \addplot [color=mycolor3, style = solid, ultra thick, forget plot]
+        \addplot+[color=mycolor3, style = solid, forget plot]
           table[row sep=crcr]{%
         -4.01084873036827	0\\
         -4.01084873036822	0\\
@@ -359,7 +361,7 @@
         -4.43649167310231	0\\
         };
         
-        \addplot [color=mycolor4, style = solid, ultra thick,  forget plot]
+        \addplot+[color=mycolor4, style = solid,  forget plot]
           table[row sep=crcr]{%
         2.63677968348475e-16	-3.32301249776487\\
         -1.31214832611581e-05	-3.32301038947714\\
@@ -457,7 +459,7 @@
         6.77962264341521e-16	-3.13209195267317\\
         };
         
-        \addplot [color=red, style = solid, ultra thick,  forget plot]
+        \addplot+[color=red, style = solid,  forget plot]
           table[row sep=crcr]{%
         2.63677968348475e-16	3.32301249776487\\
         -1.31214832611581e-05	3.32301038947714\\
@@ -555,7 +557,7 @@
         6.77962264341521e-16	3.13209195267317\\
         };
 
-        \addplot [color=black!50!green, style = solid, ultra thick,  forget plot]
+        \addplot+[color=black!50!green, style = solid,  forget plot]
           table[row sep=crcr]{%
         0	0\\
         -9.32246040892286e-05	-0.00990567878862648\\
@@ -653,7 +655,7 @@
         -3.72687109858774	0\\
         };
         
-        \addplot [color=red, only marks, mark=square, mark options={solid, red}, style = solid, ultra thick, forget plot]
+        \addplot+[color=red, only marks, mark=square, mark options={solid, red}, style = solid, forget plot]
           table[row sep=crcr]{%
         -15.5127260871559	7.75374247372119\\
         -15.5127260871559	-7.75374247372119\\
@@ -664,6 +666,7 @@
         -0.454779031876892	0.521060574738263\\
         -0.454779031876892	-0.521060574738263\\
         };
+        % \addlegendentry{Designed poles}
 
         \end{axis}
     \end{tikzpicture}
