--- a/glossary.tex
+++ b/glossary.tex
@@ -46,4 +46,6 @@
 \newacronym{LPF}{LPF}{Low Pass Filter}
 \newacronym{LQG}{LQG}{Linear Quadratic Gaussian}
 
+\newacronym{MV}{MV}{Munipulated Variable}
+
 
