--- a/stellenbosch_ee_report.tex
+++ b/stellenbosch_ee_report.tex
@@ -14,6 +14,7 @@
 \sloppy
 \onehalfspacing
 \selectlanguage{british}
+\usepackage{textcomp}
 
 % Headings
 \usepackage[raggedright,sf,bf]{titlesec}
@@ -73,6 +74,7 @@
 \usepackage{cancel}
 \usepackage{siunitx} % SI Units
 \usepackage{tabstackengine}
+\usepackage{relsize} % For large sum sign
 \newcolumntype{M}[1]{>{\centering\arraybackslash$}m{#1}<{$}} % Middle (don't clash with C from tabularx)
 \newlength{\mycolwd} % array column width
 \settowidth{\mycolwd}{$\bm{x}_{w+q-1}$} % "width" of largest element in array
